@@ -1,6 +1,5 @@
 package com.myname.mymodid.PositionalEvents.Loggers;
 
-import com.myname.mymodid.PositionalEvents.Loggers.Generic.GenericQueueElement;
 import cpw.mods.fml.common.network.simpleimpl.IMessage;
 import cpw.mods.fml.common.network.simpleimpl.IMessageHandler;
 import cpw.mods.fml.common.network.simpleimpl.MessageContext;
@@ -9,43 +8,62 @@ import net.minecraft.client.Minecraft;
 import net.minecraft.util.ChatComponentText;
 import org.apache.commons.lang3.NotImplementedException;
 
-import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 import java.lang.reflect.Type;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 
-public class GenericPacket<QueueElement extends GenericQueueElement> implements IMessage {
+public class GenericPacket implements IMessage {
 
-    public ArrayList<QueueElement> queueElementArrayList = new ArrayList<>();
-    private Class<QueueElement> type; // Class reference for QueueElement
+    public ArrayList<ISerializable> queueElementArrayList = new ArrayList<>();
+
+    public GenericPacket(ArrayList<ISerializable> queueElementArrayList) {
+        this.queueElementArrayList = queueElementArrayList;
+    }
+
+    public GenericPacket() { }
 
     @Override
     public void fromBytes(ByteBuf buf) {
         try {
-            Constructor<QueueElement> constructor = type.getDeclaredConstructor(); // Get the default constructor
+            // Read the class name from the buffer
+            int classNameLength = buf.readInt();
+            byte[] stringBytes = new byte[classNameLength];
+            buf.readBytes(stringBytes);
+            String className = new String(stringBytes, StandardCharsets.UTF_8);
 
+            // Getting the Class object for the given class name and ensure it is assignable to ISerializable
+            Class<?> rawClass = Class.forName(className);
+            if (!ISerializable.class.isAssignableFrom(rawClass)) {
+                throw new ClassNotFoundException("Class does not implement ISerializable: " + className);
+            }
+            Class<? extends ISerializable> clazz = rawClass.asSubclass(ISerializable.class);
+
+            // Read the number of elements
             int eventCount = buf.readInt();
 
+            // Processing each element
             for (int elementCounter = 0; elementCounter < eventCount; elementCounter++) {
-                QueueElement queueElement = constructor.newInstance(); // Create new instance using constructor
+                ISerializable queueElement = clazz.getDeclaredConstructor().newInstance(); // Create a new instance for each element
 
-                for(Field field : queueElement.getClass().getDeclaredFields()) {
-                    field.setAccessible(true); // Make the field accessible
+                for (Field field : queueElement.getClass().getFields()) {
                     Type fieldType = field.getType();
 
+                    // Deserialize data based on field type
                     if (fieldType.equals(String.class)) {
                         int length = buf.readInt();
                         byte[] bytes = new byte[length];
                         buf.readBytes(bytes);
                         String value = new String(bytes, StandardCharsets.UTF_8);
-                        field.set(queueElement, value); // Set field value
+                        field.set(queueElement, value);
                     } else if (fieldType.equals(int.class)) {
-                        field.set(queueElement, buf.readInt()); // Set field value
+                        field.set(queueElement, buf.readInt());
+                    } else if (fieldType.equals(long.class)) {
+                        field.set(queueElement, buf.readLong());
                     } else if (fieldType.equals(double.class)) {
-                        field.set(queueElement, buf.readDouble()); // Set field value
+                        field.set(queueElement, buf.readDouble());
                     } else if (fieldType.equals(float.class)) {
-                        field.set(queueElement, buf.readFloat()); // Set field value
+                        field.set(queueElement, buf.readFloat());
                     } else {
                         throw new NotImplementedException("Unsupported type " + fieldType);
                     }
@@ -58,17 +76,22 @@ public class GenericPacket<QueueElement extends GenericQueueElement> implements 
         }
     }
 
+
     @Override
     public void toBytes(ByteBuf buf) {
         try {
+            // Type
+            byte[] classNameBytes = queueElementArrayList.get(0).getClass().getName().getBytes(StandardCharsets.UTF_8);
+            buf.writeInt(classNameBytes.length); // Write the length of the string
+            buf.writeBytes(classNameBytes);      // Write the string itself
+
             // Write the number of elements in the list to the buffer
             buf.writeInt(queueElementArrayList.size());
 
             // Iterate over each element in the list
-            for (QueueElement element : queueElementArrayList) {
+            for (ISerializable element : queueElementArrayList) {
                 // Make sure each field is accessible
-                for (Field field : element.getClass().getDeclaredFields()) {
-                    field.setAccessible(true); // Make the field accessible
+                for (Field field : element.getClass().getFields()) {
                     Type fieldType = field.getType();
 
                     // Check the type of each field and serialize it accordingly
@@ -79,13 +102,16 @@ public class GenericPacket<QueueElement extends GenericQueueElement> implements 
                         buf.writeBytes(bytes);      // Write the string itself
                     } else if (fieldType.equals(int.class)) {
                         Integer value = (Integer) field.get(element);
-                        buf.writeInt(value);        // Write the integer value
+                        buf.writeInt(value);
+                    } else if (fieldType.equals(long.class)) {
+                        Long value = (Long) field.get(element);
+                        buf.writeLong(value);
                     } else if (fieldType.equals(double.class)) {
                         Double value = (Double) field.get(element);
-                        buf.writeDouble(value);     // Write the double value
+                        buf.writeDouble(value);
                     } else if (fieldType.equals(float.class)) {
                         Float value = (Float) field.get(element);
-                        buf.writeFloat(value);      // Write the float value
+                        buf.writeFloat(value);
                     } else {
                         throw new NotImplementedException("Unsupported type " + fieldType);
                     }
@@ -101,11 +127,11 @@ public class GenericPacket<QueueElement extends GenericQueueElement> implements 
 
         @Override
         public IMessage onMessage(final GenericPacket message, MessageContext ctx) {
-            // Ensure the operation is run on the client side thread
-//            for (QueueElement queueElement : message.queueElementArrayList) {
-//                Minecraft.getMinecraft().thePlayer.addChatComponentMessage(new ChatComponentText("Received: " + queueElement.toString()));
-//                Minecraft.getMinecraft().thePlayer.addChatComponentMessage(new ChatComponentText("Received: " + queueElement.x));
-//            }
+
+            for(ISerializable iSerializable : message.queueElementArrayList) {
+                Minecraft.getMinecraft().thePlayer.addChatComponentMessage(new ChatComponentText(iSerializable.localiseText()));
+            }
+
             return null; // No response packet needed
         }
     }
